test/parser/channel/connect-021.hac
// "connect-021.hac"
// copy-modified from "connect-007.hac"
// should error out connecting two send-only channels

defproc one_shot(chan!(bool) a) {
chp { a!(true) }
}

one_shot a, b;
a.a = b.a;		// error

